package proto_headers;

message AuthorizationHeader {
  required uint64 user_id = 1;
  required string access_token = 2;
}
